cabal-version:       2.0

name:                aoc2021
version:             0.1.0.0
license-file:        LICENSE
author:              Alexey Lebedeff
maintainer:          binarin@binarin.ru
build-type:          Simple

executable aoc2021
  main-is:             Main.hs
  other-modules:       Prelude
                     , Vector2D
                     , Day01
                     , Day03
                     , Day04
                     -- , Day05
                     -- , Day06
                     -- , Day07
                     -- , Day08
                     -- , Day09
                     -- , Day10
                     -- , Day11
                     -- , Day12
                     -- , Day13
                     -- , Day14
                     -- , Day15
                     -- , Day16
                     -- , Day17
                     -- , Day18
                     -- , Day19
                     -- , Day20
                     -- , Day21
                     -- , Day22
                     -- , Day23
                     -- , Day24
                     -- , Day25
  default-extensions: ScopedTypeVariables
                    , MultiParamTypeClasses
                    , FunctionalDependencies
                    , TypeSynonymInstances
                    , FlexibleInstances
                    , FlexibleContexts
                    , LambdaCase
                    , OverloadedStrings
                    , InstanceSigs
  mixins:
      base (Prelude as BasePrelude)
    , base hiding (Prelude)
  build-depends:       base
                     , containers
                     , bytestring
                     , megaparsec
                     , text
                     , lens
                     , array
                     , vector
                     , split
                     , string-interpolate
  -- hs-source-dirs:
  default-language:    Haskell2010
